# full-stack

./: docker-compose.yml
backend/: .coverage  Dockerfile  Dockerfile.prod  pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/api/: crud.py  ping.py  summaries.py
backend/app/models/: pydantic.py  tortoise.py
backend/migrations/models/: 1_20260210075318_None.py
backend/tests/: conftest.py  test_ping.py  test_summaries.py
docs/: chapter-01-fastapi  chapter-02-crud-tdd.md  chapter-03-code-quality.md
scripts/: lint.sh
